--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>db-pet-clinic</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>pet clinic</name>
 	<description>pet clinic learning project</description>
 	<properties>
@@ -47,7 +47,7 @@
 
 	<scm>
 		<developerConnection>scm:git:git@github.com:Hollowsrain/db-pet-clinic.git</developerConnection>
-	  <tag>db-pet-clinic-0.0.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 </project>
