moved to same folder so that JPA impl would be picked up, added java configurations

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-#spring.profiles.active=
+#profiles: JPA, MAP
+spring.profiles.active=JPA
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.messages.basename=messages/messages
